--- a/Propro-Client/Forms/AirdForm.resx
+++ b/Propro-Client/Forms/AirdForm.resx
@@ -460,13 +460,13 @@
     <value>198, 90</value>
   </data>
   <data name="cbLosslessMz.Size" type="System.Drawing.Size, System.Drawing">
-    <value>198, 21</value>
+    <value>244, 21</value>
   </data>
   <data name="cbLosslessMz.TabIndex" type="System.Int32, mscorlib">
     <value>17</value>
   </data>
   <data name="cbLosslessMz.Text" xml:space="preserve">
-    <value>Lossless m/z(Bigger File Size)</value>
+    <value>4 decimal places for m/z(Default is 3)</value>
   </data>
   <data name="&gt;&gt;cbLosslessMz.Name" xml:space="preserve">
     <value>cbLosslessMz</value>
